# gym-trading-env

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: python-app.yml
docs/: account.drawio
examples/: download_forex_data.py  example_plot_usdjpy.py  example_usage.py  plot.py  train_agent.py  train_multiple_agents.py
src/gym_trading_env/: __init__.py
src/gym_trading_env/config/: default_config.yaml
src/gym_trading_env/envs/: __init__.py  account.py  action.py  asset_manager.py  broker_accounts.py  callbacks.py  position.py  position_manager.py  trade_record.py  trade_record_manager.py  trading_env.py  user_accounts.py
src/gym_trading_env/rendering/: health_bar.py  info_logging_callback.py  plotting.py  renderer.py
src/gym_trading_env/rewards/: __init__.py  reward_functions.py
src/gym_trading_env/utils/: __init__.py  conversion.py  data_downloader.py  data_processing.py  feature_engineering.py  plotting.py  portfolio_management.py
tests/: test_envs.py  test_poltting.py  test_position_manager.py  test_reward.py
