[tool.poetry]
name = "gym-trading-env"
version = "0.1.0"
description = ""
authors = ["fogdance"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
absl-py = "2.1.0"
annotated-types = "0.7.0"
autocommand = "2.2.2"
backports-tarfile = "1.2.0"
beautifulsoup4 = "4.12.3"
certifi = "2024.12.14"
charset-normalizer = "3.4.1"
click = "8.1.8"
cloudpickle = "3.1.0"
contourpy = "1.3.1"
cycler = "0.12.1"
docker-pycreds = "0.4.0"
farama-notifications = "0.0.4"
filelock = "3.16.1"
fonttools = "4.55.3"
frozendict = "2.4.6"
fsspec = "2024.12.0"
gitdb = "4.0.12"
gitpython = "3.1.44"
grpcio = "1.68.1"
gymnasium = "1.0.0"
html5lib = "1.1"
idna = "3.10"
importlib-metadata = "8.0.0"
importlib-resources = "6.4.0"
inflect = "7.3.1"
jaraco-collections = "5.1.0"
jaraco-context = "5.3.0"
jaraco-functools = "4.0.1"
jaraco-text = "3.12.1"
jinja2 = "3.1.5"
kiwisolver = "1.4.8"
lxml = "5.3.0"
markdown = "3.7"
markupsafe = "3.0.2"
matplotlib = "3.10.0"
more-itertools = "10.3.0"
mplfinance = "0.12.10b0"
mpmath = "1.3.0"
multitasking = "0.0.11"
networkx = "3.4.2"
numpy = "1.26.4"
nvidia-cublas-cu12 = "12.4.5.8"
nvidia-cuda-cupti-cu12 = "12.4.127"
nvidia-cuda-nvrtc-cu12 = "12.4.127"
nvidia-cuda-runtime-cu12 = "12.4.127"
nvidia-cudnn-cu12 = "9.1.0.70"
nvidia-cufft-cu12 = "11.2.1.3"
nvidia-curand-cu12 = "10.3.5.147"
nvidia-cusolver-cu12 = "11.6.1.9"
nvidia-cusparse-cu12 = "12.3.1.170"
nvidia-nccl-cu12 = "2.21.5"
nvidia-nvjitlink-cu12 = "12.4.127"
nvidia-nvtx-cu12 = "12.4.127"
packaging = "24.2"
pandas = "2.2.3"
peewee = "3.17.8"
pillow = "11.1.0"
platformdirs = "4.2.2"
protobuf = "5.29.2"
psutil = "6.1.1"
pydantic = "2.10.4"
pydantic-core = "2.27.2"
pyparsing = "3.2.1"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
pyyaml = "6.0.2"
requests = "2.32.3"
sentry-sdk = "2.19.2"
setproctitle = "1.3.4"
six = "1.17.0"
smmap = "5.0.2"
soupsieve = "2.6"
stable-baselines3 = "2.4.0"
sympy = "1.13.1"
ta-lib = "0.6.0"
tensorboard = "2.18.0"
tensorboard-data-server = "0.7.2"
tomli = "2.0.1"
torch = "2.5.1"
triton = "3.1.0"
typeguard = "4.3.0"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.3.0"
wandb = "0.19.1"
webencodings = "0.5.1"
werkzeug = "3.1.3"
yfinance = "0.2.51"
zipp = "3.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
